name:                zundoko-haskell
version:             0.1.0.0
synopsis:            Zun, Zun, Zun, Zun, Doko, Kiyoshi!! by Haskell
description:         Please see README.md
homepage:            http://github.com/mitsuji/zundoko-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable zundoko-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/zundoko-haskell
